--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -1,7 +1,7 @@
 en:
   app:
     title: items-markeplace-mvp
-    version: 0.0.2-alpine
+    version: 0.21.37-alpine
 
     list-your-item: list your item
     dashboard: dashboard
@@ -18,6 +18,7 @@ en:
     item_id: item ID
     created_at: created at
     buyer: buyer
+    seller: seller
     status: status
     paid_at: paid at
 
@@ -27,3 +28,9 @@ en:
     total: total
 
     checkout: checkout
+    mark-as-paid: mark as paid
+    pay: pay
+
+    selling: selling
+    buying: buying
+
