--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -1,6 +1,6 @@
 en:
   app:
-    title: Clark Marketplace
+    title: MVP Marketplace
 
     list-your-item: List your item
     dashboard: Dashboard
