fix validation of item

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -11,6 +11,7 @@ en:
     your-orders: Your orders
     orders:
       new: new order
+      list: Orders
     item: Item
     items: Items
     your-items: Your items
