--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -54,3 +54,6 @@ en:
       too_little: "has to be equal or greater than %{value}"
       taken: already taken
       session_create_failed: Invalid email or password
+
+    confirm-delete: Are you sure you want to delete this item?
+    delete: Delete
