--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -54,6 +54,7 @@ en:
       too_little: "has to be equal or greater than %{value}"
       taken: already taken
       session_create_failed: Invalid email or password
+      unauthorized: You do not have enough permissions to do that
 
     confirm-delete: Are you sure you want to delete this item?
     delete: Delete
