--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -56,7 +56,7 @@ en:
       taken: already taken
       session_create_failed: Invalid email or password
       unauthorized: The system has determined that <span class="font-semibold">you are not</span> presently <span class="font-semibold">authorized</span> to use this system function.
-      unauthenticated: Please sign in with you credentials or register new account before proceeding.
+      unauthenticated: Please <b class="font-semibold">sign in</b> with you credentials or <b class="font-semibold">register</b> new account before continuing.
 
     confirm-delete: Are you sure you want to delete this item?
     delete: Delete
