add sort to search form

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -67,6 +67,13 @@ en:
     delete: Delete
 
   lib:
+    sort_options:
+      price_asc: Price Ascending
+      price_desc: Price Descending
+      name_asc: Name Ascending
+      name_desc: Name Descending
+      created_at_asc: The oldest first
+      created_at_desc: The Most Recent
     categories:
       alarm: Alarm
       ambulance: Ambulance
