--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -35,8 +35,12 @@ en:
     cancel: Cancel
     ship: Ship
 
-    selling: Selling
-    buying: Buying
+    p-dashboard:
+      selling: Selling
+      buying: Buying
+      settings: Settings
+      bank_account: Bank Account
+      credit_cards: Credit Cards
 
     dashboard-items:
       list-your-first-item: List your first item
