--- a/app/translations/en_categories.yml
+++ b/app/translations/en_categories.yml
@@ -53,3 +53,29 @@ en:
     "clothing/women/women_swimwear": Women's Swimwear
     "clothing/women/women_tops": Women's Tops
     "clothing/women/women_trousers": Women's Trousers
+
+    "health_n_beauty": Health & Beauty
+    "health_n_beauty/bodycare_n_fitness": Bodycare & Fitness
+    "health_n_beauty/bodycare_n_fitness/bodycare_appliances": Bodycare Appliances
+    "health_n_beauty/bodycare_n_fitness/shaving": Shaving
+    "health_n_beauty/cosmetics_n_skincare": Cosmetics & Skincare
+    "health_n_beauty/cosmetics_n_skincare/cosmetics": Cosmetics
+    "health_n_beauty/cosmetics_n_skincare/fragrance": Fragrance
+    "health_n_beauty/cosmetics_n_skincare/skincare": Skincare
+    "health_n_beauty/haircare": Haircare
+    "health_n_beauty/haircare/haircare_appliances": Haircare Appliances
+    "health_n_beauty/haircare/haircare_products" : Haircare Products
+    "health_n_beauty/health": Health
+    "health_n_beauty/health/contact_lenses": Contact Lenses
+    "health_n_beauty/health/diet": Diet
+    "health_n_beauty/health/glasses": Glasses
+    "health_n_beauty/health/medical": Medical
+    "health_n_beauty/health/nutrition": Nutrition
+    "health_n_beauty/health/oral_health": Oral Health
+    "health_n_beauty/health/vitamins_n_supplements": Vitamins & Supplements
+
+    "jewellery": Jewellery
+    "jewellery/mens_jewellery": Men's Jewellery
+    "jewellery/mens_watches": Men's Watches
+    "jewellery/womens_jewellery": Women's Jewellery
+    "jewellery/womens_watches": Women's Watches
