--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -48,7 +48,7 @@ en:
     checkout: Checkout
     mark-as-paid: Mark as paid
     pay: Pay
-    pay_with_money: Pay
+    pay_with_money: Pay with money
     cancel: Cancel
     ship: Ship
 
