--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -14,6 +14,7 @@ en:
     orders:
       new: new order
       list: Orders
+      payment_success: Payment success
 
     users:
       new: new user
