Fix accessibility issues. Move total items up by ~4rem

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -2,7 +2,7 @@ en:
   app:
     title: MVP Marketplace
 
-    total_entries: "Total entries:"
+    total_entries: "Total items:"
     no_items_found: No items found
 
     list-your-item: List your item
