--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -73,7 +73,7 @@ en:
       tags: Tags
 
     dashboard-items:
-      list-your-first-item: List your first item
+      list-your-first-item: Add your first item
 
     marketplace_setup:
       mpo_fee_percent: Owner fee percent
