--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -103,6 +103,7 @@ en:
       unauthorized: The system has determined that <span class="font-semibold">you are not</span> presently <span class="font-semibold">authorized</span> to use this system function.
       unauthenticated: Please <b class="font-semibold">sign in</b> with you credentials or <b class="font-semibold">register</b> new account before continuing.
       item_with_orders: The system has determined that <span class="font-semibold">your item</span> has <span class="font-semibold">open orders</span>. Cowardly refusing destroying.
+      cannot_edit_coz_has_active_orders: The system has determined that <span class="font-semibold">your item</span> has <span class="font-semibold">orders</span>. Editing is not allowed.
       denied: Permission denied
 
     confirm-delete: Are you sure you want to delete this item?
