Copy changes, html cleanup

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -76,9 +76,9 @@ en:
       list-your-first-item: Add your first item
 
     marketplace_setup:
-      mpo_fee_percent: Owner fee percent
-      stripe_pk_key: Stripe Publishable key
-      stripe_sk_key: Stripe Secret key
+      mpo_fee_percent: Marketplace Owner Fee (percent)
+      stripe_pk_key: Stripe Publishable Key
+      stripe_sk_key: Stripe Secret Key
       stripe_client_id: Stripe Owner Connect Account client ID
 
     item_statuses:
