--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -117,7 +117,7 @@ en:
 
     item_statuses:
       sold: sold
-      none: missing
+      none: "&nbsp;"
 
     order_statuses:
       order_status: status
