cleanup categories and into qa site

--- a/app/translations/en_categories.yml
+++ b/app/translations/en_categories.yml
@@ -9,6 +9,7 @@ en:
     jewellery/earrings: Earrings
     jewellery/hair_accessories: Hair Accessories
     jewellery/jewellery_sets: Jewellery Sets
+    jewellery/mangalsutras_n_tanmaniyas: Mangalsutras & Tanmaniyas
     jewellery/necklaces_n_chains: Necklaces & Chains
     jewellery/necklaces_n_chains/chains: Chains
     jewellery/necklaces_n_chains/necklaces: Necklaces
