allow ordering an item many times

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -33,6 +33,9 @@ en:
       new: new item
       created: Item created
       updated: Item updated
+      ordered_times:
+        other: Ordered %{count} times
+        one: Ordered %{count} time
 
     categories:
       list: Categories
