add missing seed zip

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -33,6 +33,7 @@ en:
       new: new item
       created: Item created
       updated: Item updated
+      deleted: Item has been deleted successfully
       ordered_times:
         other: Ordered %{count} times
         one: Ordered %{count} time
