--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -10,13 +10,21 @@ en:
       users: Users
       home: Home
     metric:
-      total_revenue: Total Revenue
-      total_users: Total Users
-      new_users: New Users
-      total_orders: Total Orders
-      new_orders: New Order
-      total_items: Total Items
-      new_items: New Items
+      period:
+        montly: Montly
+        daily: Daily
+        total: Total
+      name: 
+        revenue: Revenue
+        income: Income
+        users: Users
+        orders: Orders
+        items: Items
+      delta_name:
+        income: New Income
+        users: New Users
+        orders: New Orders
+        items: New Items
   app:
     title: MVP Marketplace
 
