--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -32,6 +32,7 @@ en:
         delta: Since yesterday
   app:
     title: MVP Marketplace
+    support_email: "support@getmarkeplace.co"
 
     total_entries: "Total items:"
     no_items_found: No items found
@@ -151,6 +152,14 @@ en:
     cancel: Cancel
     ship: Ship
 
+    passwords:
+      edit: Change password
+      updated: Your new password has been set successfully.
+
+    emails:
+      passwords:
+        reset:
+          subject: Reset Password
     p-dashboard:
       selling: Selling
       buying: Buying
@@ -196,6 +205,11 @@ en:
 
     account:
       created: Your account has been created
+      reset_password:
+        title: Reset password
+        send_link: Send email with authentication link
+    authentication_links:
+      created: Please check your email. We have sent you a password resetting instructions.
 
     errors:
       cannot_sell_to_yourself: You cannot sell to yourself
@@ -215,7 +229,6 @@ en:
 
   lib:
     sort_options:
-      relevance: Relevance
       price_asc: Price (lowest first)
       price_desc: Price (highest first)
       name_asc: Name A-Z
