--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -87,6 +87,9 @@ en:
         list_id: List ID
 
     items:
+      self-list: You are now on <span class="font-semibold">your</span> list
+      user-list: You are now on <span class="font-semibold">%{name}'s</span> list (%{email})
+      yours: Your list
       list: Items
       new: new item
       created: Item created
