add posibility to follow a user

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -87,6 +87,7 @@ en:
         list_id: List ID
 
     items:
+      by_user: Browse this user's items
       self-list: You are now on <span class="font-semibold">your</span> list
       user-list: You are now on <span class="font-semibold">%{name}'s</span> list (%{email})
       yours: Your list
