--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -80,10 +80,10 @@ en:
         user_followed_user: "started following user %{target}"
         user_unfollowed_user: stoped following user %{target}
         page_visited: visited <a href="%{obj}">%{obj}</a> page
-        item_created: created an <a href="/items/%{obj}">%{obj} item</a>
         order_status_created: changed status of the [%{target_id}] order to <span class="font-semibold">%{status}</span>
-        order_created: created an [%{object_id}] order for <a href="/items/%{target_id}">%{target}</a> item <img src="%{url}" />
+        order_created: placed an [%{object_id}] order for <a href="/items/%{target_id}">%{target}</a> item
         account_created: created an account.
+        item_created: created a <a href="/items/%{object_id}">%{name}</a> item
 
     users:
       new: new user
