--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -72,6 +72,7 @@ en:
       name: Name
       summary: Summary
       actions: Actions
+      add: Add groups
 
     activities:
       list: Activities
