--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -102,6 +102,7 @@ en:
         email: Email
         list_id: List ID
         slug: slug
+        followers: Followers
 
     items:
       by_user: Browse this user's items
